Updated handling of command-line output and errors to print only when you need it - when something breaks and you need to debug. Improved the external process handling to avoid deadlocks. Merged the process std-error and std-out streams to simplify the output handling logic.