@@ -2,6 +2,7 @@ package com.squarepolka.readyci.tasks;
 
 import com.squarepolka.readyci.configuration.TaskConfiguration;
 import com.squarepolka.readyci.taskrunner.BuildEnvironment;
+import com.squarepolka.readyci.util.Util;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -41,10 +42,13 @@ public abstract class Task {
         LOGGER.debug(String.format("Executing command: %s", arrayToString(command)));
         try {
             File workingDirectoryFile = new File(workingDirectory);
-            Process process = Runtime.getRuntime().exec(command, null, workingDirectoryFile);
+            ProcessBuilder processBuilder = new ProcessBuilder(command);
+            processBuilder.directory(workingDirectoryFile);
+            processBuilder.redirectErrorStream(true);
+            Process process = processBuilder.start();
             InputStream processInputStream = process.getInputStream();
             processInputStream.mark(5120);
-            printProcessOutput(process);
+            handleProcessOutput(process);
             checkProcessSuccess(process);
             resetInputStream(processInputStream);
             return processInputStream;
@@ -55,31 +59,37 @@ public abstract class Task {
         }
     }
 
-    protected void printProcessOutput(Process process) throws IOException {
-        BufferedReader processOutputStream = getProcessOutputStream(process.getInputStream());
-        BufferedReader processErrorStream = getProcessOutputStream(process.getErrorStream());
-
+    /**
+     * Handle the process output stream in one of two ways
+     *
+     * 1 - Log the output to the console if the LOGGER is in debug mode
+     * 2 - Drain half of the output to ensure long running processes don't hang,
+     *  while leaving some output in the buffer in case an error is thrown
+     *  and the output is needed to debug
+     * @param process
+     * @throws IOException
+     */
+    private void handleProcessOutput(Process process) throws IOException {
         while (process.isAlive()) {
-            printStdOut(processOutputStream);
-            printStdError(processErrorStream);
+            InputStream processInputStream = process.getInputStream();
+            if (LOGGER.isDebugEnabled()) {
+                printProcessOutput(processInputStream);
+            } else {
+                Util.skipHalfOfStream(processInputStream);
+            }
         }
     }
 
-    private void printStdError(BufferedReader processErrorStream) throws IOException {
-        String processErrorLine = "";
-        while (processErrorStream.ready() &&
-                (processErrorLine = processErrorStream.readLine()) != null) {
-                System.out.println(processErrorLine);
-        }
-    }
-
-    private void printStdOut(BufferedReader processOutputStream) throws IOException {
-        String processOutputLine = "";
-        while (processOutputStream.ready() &&
-                (processOutputLine = processOutputStream.readLine()) != null
-                && LOGGER.isDebugEnabled()) {
-
-                System.out.println(processOutputLine);
+    private void printProcessOutput(InputStream processInputStream) {
+        try {
+            BufferedReader processOutputStream = getProcessOutputStream(processInputStream);
+            String processOutputLine;
+            while (processOutputStream.ready() &&
+                    (processOutputLine = processOutputStream.readLine()) != null) {
+                    System.out.println(processOutputLine);
+            }
+        } catch (IOException e) {
+            LOGGER.error(String.format("Error while reading and printing process output %s", e.toString()));
         }
     }
 
@@ -88,9 +98,12 @@ public abstract class Task {
         return new BufferedReader(processStreamReader);
     }
 
-    protected void checkProcessSuccess(Process process) throws InterruptedException {
-        int exitValue = process.waitFor();
+    protected void checkProcessSuccess(Process process) {
+        int exitValue = process.exitValue();
         if (exitValue != 0) {
+            InputStream processInputStream = process.getInputStream();
+            resetInputStream(processInputStream);
+            printProcessOutput(processInputStream);
             throw new TaskExecuteException(String.format("Exited with %d", exitValue));
         }
     }
